--- a/octetmc/Cargo.toml
+++ b/octetmc/Cargo.toml
@@ -19,13 +19,15 @@ rust-version = "1.89"
 unused_parens = "allow"
 
 
+[dependencies.smol]
+version = "2.0"
+
 [dependencies.bevy_ecs]
 version = "0.16"
 [dependencies.bevy_app]
 version = "0.16"
-
-[dependencies.voxidian-protocol]
-path = "../voxidian-protocol"
+[dependencies.bevy_defer]
+version = "0.14"
 
 [dependencies.image]
 version = "0.25"
