--- a/octetmc-protocol/Cargo.toml
+++ b/octetmc-protocol/Cargo.toml
@@ -31,3 +31,12 @@ unused_parens = "allow"
 
 [dependencies.semver]
 version = "1.0"
+
+[dependencies.uuid]
+version = "1.17"
+
+[dependencies.serde]
+version  = "1.0"
+features = [ "derive" ]
+[dependencies.serde_json]
+version = "1.0"
