--- a/octetmc/Cargo.toml
+++ b/octetmc/Cargo.toml
@@ -55,3 +55,7 @@ version = "1.1"
 version = "0.9"
 [dependencies.openssl]
 version = "0.10"
+[dependencies.hex]
+version = "0.4"
+[dependencies.surf]
+version = "2.3"
