--- a/octetmc-protocol/Cargo.toml
+++ b/octetmc-protocol/Cargo.toml
@@ -35,6 +35,8 @@ version = "1.0"
 [dependencies.uuid]
 version          = "1.17"
 default-features = false
+[dependencies.cesu8]
+version = "1.1"
 
 [dependencies.serde]
 version  = "1.0"
