--- a/octetmc/Cargo.toml
+++ b/octetmc/Cargo.toml
@@ -39,6 +39,7 @@ default-features = false
 [dependencies.bevy_ecs]
 version          = "0.16"
 default-features = false
+features         = [ "multi_threaded" ]
 [dependencies.bevy_time]
 version          = "0.16"
 default-features = false
