--- a/octetmc-macros/Cargo.toml
+++ b/octetmc-macros/Cargo.toml
@@ -26,7 +26,7 @@ unused_parens = "allow"
 [dependencies.syn]
 version          = "2.0"
 default-features = false
-features         = [ "parsing" ]
+features         = [ "parsing", "proc-macro" ]
 
 [dependencies.proc-macro-crate]
 version = "3.3"
