--- a/octetmc/Cargo.toml
+++ b/octetmc/Cargo.toml
@@ -24,6 +24,14 @@ rustdoc-args = [
 all-features = true
 
 
+[profile.dev.package."*"]
+opt-level = 3
+
+[profile.release]
+opt-level     = 3
+codegen-units = 1
+lto           = "fat"
+
 [profile.dev.package.octetmc-chunksection]
 opt-level        = 3
 debug-assertions = false
