Switched to mc 1.21.6; Added generator run check; Added packet prefix validation;

--- a/octetmc-generated/Cargo.toml
+++ b/octetmc-generated/Cargo.toml
@@ -19,6 +19,9 @@ rust-version = "1.87"
 unused_parens = "allow"
 
 
+[dependencies.semver]
+version = "1.0"
+
 [dependencies.smol]
 version = "2.0"
 
